# gabriela

./: .gitignore  README.md  agent_principal.py  core.py  example.ipynb  index.html  main.py  mongo-test.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  test_whatsapp_agent.ipynb  utils.py
agent/: agent.py  core.py  example.ipynb  expenses_storage.py  pampa_tools.py  prompt.py  state.py  storage.py
app/: config.py  main.py  settings.py
app/api/: menu_inference.py
app/components/: MenuInference.tsx
app/modules/: openai_menu_inference.py
app/pages/: menu-inference.tsx
gabriela/agent/: agent.py  core.py  expenses_storage.py  pampa_tools.py  prompt.py  state.py
pages/api/: infer-menu.ts
src/: nav-items.jsx
src/lib/: supabase.js
src/pages/: Dashboard.jsx  Index.jsx
