[tool.poetry]
name = "gabriela"
version = "0.1.0"
description = ""
authors = ["fpingham <fpingham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.27"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
tinydb = "^4.8.0"
flask = "^3.0.3"
twilio = "^9.3.1"
openai = "^1.47.1"
jinja2 = "^3.1.4"
langchain-core = "^0.3.5"
langchain-openai = "^0.2.0"
requests = "^2.32.3"
logging = "^0.4.9.6"
langchain = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
